# hedgebot

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/sqrt_price_math/: mul_div_rounding_up.rs
notes/: fuzz-notes.md
src/: lib.rs  main.rs
src/backtester/: mod.rs
src/ingest_chain/: blocks.rs  db_types.rs  mod.rs  talk_to_sled.rs
src/ingest_chain/protocol_handlers/: lib.rs  mod.rs
src/ingest_chain/protocol_handlers/uniswapv3/: mod.rs
src/solidints/: I256.rs  U160.rs  mod.rs
src/solidmath/: fixed_point.rs  full_math.rs  int_types.rs  mod.rs  sqrt_price_math.rs
src/unisim/: fee.rs  fee_growth.rs  liq_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick.rs
src/unitest/: mod.rs  unitest.rs
