[package]
name = "hedgebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
primitive-types = "0.11"
lazy_static = "1.4.0"
sled = "0.34"
ranges = "0.3"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
arbitrary = { version = "*", optional = true, features = ["derive"] }
